cmake_minimum_required(VERSION 3.29)
project(AdventOfCode)

set(CMAKE_CXX_STANDARD 20)

add_executable(
        AdventOfCode main.cpp
        Utils/utils.cpp
        Utils/utils.h
        Year2022/Day1/dayOne.cpp
        Year2022/Day1/dayOne.h
        Year2022/Day2/DayTwo.cpp
        Year2022/Day2/DayTwo.h
        Year2022/Day2/DayTwo.cpp
        Year2022/Day2/DayTwo.h
        Year2022/Day3/DayThree.cpp
        Year2022/Day3/DayThree.h
        Year2022/Day4/DayFour.cpp
        Year2022/Day4/DayFour.h
        Year2022/Day5/DayFive.cpp
        Year2022/Day5/DayFive.h
        Year2022/Day6/DaySix.cpp
        Year2022/Day6/DaySix.h
        Year2022/Day7/DaySeven.cpp
        Year2022/Day7/DaySeven.h
        Year2022/Day7/Directory.cpp
        Year2022/Day7/Directory.h
        Year2024/Day1/DayOne.cpp
        Year2024/Day1/DayOne.h
        Year2024/Day2/DayTwo.cpp
        Year2024/Day2/DayTwo.h
        Year2024/Day3/DayThree.cpp
        Year2024/Day3/DayThree.h
        Year2024/Day4/DayFour.cpp
        Year2024/Day4/DayFour.h
        Year2024/Day5/DayFive.cpp
        Year2024/Day5/DayFive.h
        Year2024/Day6/DaySix.cpp
        Year2024/Day6/DaySix.h
        Year2024/Day7/DaySeven.cpp
        Year2024/Day7/DaySeven.h
        Year2024/Day8/DayEight.cpp
        Year2024/Day8/DayEight.h
        Year2024/Day9/DayNine.cpp
        Year2024/Day9/DayNine.h
        Year2024/Day10/DayTen.cpp
        Year2024/Day10/DayTen.h
        Year2024/Day11/DayEleven.cpp
        Year2024/Day11/DayEleven.h
        Year2024/Day12/DayTwelve.cpp
        Year2024/Day12/DayTwelve.h
        Year2024/Day13/DayThirteen.cpp
        Year2024/Day13/DayThirteen.h
        Year2024/Day14/DayFourteen.cpp
        Year2024/Day14/DayFourteen.h
        Year2024/Day15/DayFifteen.cpp
        Year2024/Day15/DayFifteen.h
        Year2024/Day16/DaySixteen.cpp
        Year2024/Day16/DaySixteen.h
        Year2024/Day17/DaySeventeen.cpp
        Year2024/Day17/DaySeventeen.h
        Year2024/Day18/DayEighteen.cpp
        Year2024/Day18/DayEighteen.h
        Year2024/Day19/DayNineteen.cpp
        Year2024/Day19/DayNineteen.h
        Year2024/Day20/DayTwenty.cpp
        Year2024/Day20/DayTwenty.h
        Year2024/Day21/DayTwentyOne.cpp
        Year2024/Day21/DayTwentyOne.h
        Year2024/Day22/DayTwentyTwo.cpp
        Year2024/Day22/DayTwentyTwo.h
        Year2024/Day23/DayTwentyThree.cpp
        Year2024/Day23/DayTwentyThree.h
        Year2024/Day24/DayTwentyFour.cpp
        Year2024/Day24/DayTwentyFour.h
        Year2024/Day25/DayTwentyFive.cpp
        Year2024/Day25/DayTwentyFive.h
        Year2023/Day/Day.cpp
        Year2023/Day/Day.h
        Year2023/Day1/Day1.cpp
        Year2023/Day1/Day1.h
)
